# mnist_recognition

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
Docs/: Docs.md  mnist_description.md
Model_structure/: config.py  model.py  train.py
Scripts/: Examples.py  mnist_train.py
checkpoints/: best_valid.pth  best_valid_with_augmentations.pth
config/: train.yaml
docs/: mnist_description.md
git_hook/: git-hook.bat
mnist_recognition/: evaluation.py  inference.py  mnist_evaluation.py  mnist_inference.py  models.py  transforms.py
notebooks/: 01_eda.ipynb  02_inference.ipynb  03_evaluation.ipynb  04_augmentations.ipynb  05_fsgm_attacks.ipynb
notebooks/Debug/: Debug.ipynb
notebooks/MNIST/: First_draft_MNIST EDA.ipynb  initial_analysis_MNIST.ipynb
notebooks/basics/: 00_Python.ipynb  01_Python.ipynb  02_Numpy.ipynb  03_Numpy.ipynb  04_Numpy.ipynb  05_Matplotlib.ipynb  06_Pandas.ipynb  07_Pandas.ipynb  08_Pandas.ipynb  09_Seaborn.ipynb  my_first_file.csv  no_index.csv
notebooks/examples/: color_segmentation_example_01.ipynb
notebooks/mnist_research/: mnist_augmentations.ipynb  mnist_evaluator.ipynb  mnist_fgsm_attacks.ipynb  mnist_inference.ipynb  mnist_metrics_trained_with_aug.ipynb  mnist_metrics_with_augmentations.ipynb  test_aug_to_train.ipynb
object_detection/: convertor.py  fgsm_attack.py  mnist_augmentation.py  mnist_evaluation.py  mnist_inference.py  mnist_model.py  transform.py
scripts/: Examples.py  train.py
test/: conftest.py  data.py  test_color_segmentation.py
tests/: conftest.py
(+4 files in other folders)
